c4prj2_input/grade.txt
Grading at Sat Aug  3 07:45:43 UTC 2019
Compiling cards.c -> cards.o
Compiling deck.c -> deck.o
Compiling input.c -> input.o
Compiling future.c -> future.o
future.c: In function ‘future_cards_from_deck’:
future.c:30:15: error: incompatible type for argument 1 of ‘print_card’
    print_card(deck->cards[i]); // TODO
               ^
In file included from deck.h:4:0,
                 from future.h:3,
                 from future.c:4:
cards.h:36:6: note: expected ‘card_t {aka struct card_tag}’ but argument is of type ‘card_t * {aka struct card_tag *}’
 void print_card(card_t c);
      ^
Compilation of future.c failed

Overall Grade: F
